--- a/hemsida/webb.css
+++ b/hemsida/webb.css
@@ -1,4 +1,137 @@
-body{
-    background-image: url(https://i.pinimg.com/originals/55/71/4c/55714cada61890d62ec47a005b30c9ea.jpg);
-    background-color: #b53636;
+
+
+.toolbar {
+  /* position: absolute; */
+  top: 0;
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow:hidden;
+  background-color: rgb(16, 94, 29);
+  color: rgb(255, 255, 255);
+  font-size: large;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-variant: small-caps;
+}
+p {
+
+  display: block;
+  padding: 25px;
+  float: center;
+  text-align: center;
+}
+
+html{
+background: url(https://jeroentaal.photography/wp-content/uploads/2019/03/JEROEN_TAAL-2019-02-25-france-la-serre-du-chirurgien-1042.jpg) no-repeat center fixed ;
+background-size: cover;
+/* background-color: rgba(0,0,0,0.8); */
+}
+
+h2{
+  color: white;
+  
+}
+
+button{
+  padding: 100px;
+  margin: 5%;
+  float: right;
+  background-color: #4CAF50; 
+  border: none;
+  color: white;
+  /* padding: 16px 32px; */
+  text-align: center;
+  text-decoration: none;
+  /* display: inline-block; */
+  font-size: 16px;
+  /* margin: 4px 2px; */
+  /* transition-duration: 0.4s; */
+  /* cursor: pointer; */
+  border-radius: 16px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.fläkt {
+  background-color: green; 
+  color: black; 
+  /* border: 2px solid #4CAF50; */
+}
+
+ .fläkt:hover {
+  background-color: #4CAF50;
+  color: white;
+} 
+/* .fläkt:active {
+    background-color: #ffbf00;
+}  */
+
+
+
+.graf{
+    background-color: rgb(255, 255, 255);
+    margin:3%;
+     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.switch {
+  position: relative;
+  width: 120px;
+  height: 68px;
+  float: right;
+  margin: 10%;
+   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 52px;
+  width: 52px;
+  left: 8px;
+  bottom: 8px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: green;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px green;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(52px);
+  -ms-transform: translateX(52px);
+  transform: translateX(52px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 52px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
