--- a/hemsida/webb.css
+++ b/hemsida/webb.css
@@ -3,24 +3,19 @@
 .toolbar {
   /* position: absolute; */
   top: 0;
-  width: 100%;
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow:hidden;
+  /* overflow:hidden; */
   background-color: rgb(16, 94, 29);
   color: rgb(255, 255, 255);
-  font-size: large;
+  font-size: medium;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-variant: small-caps;
-}
-p {
-
-  display: block;
-  padding: 25px;
-  float: center;
+  padding: 20px;
   text-align: center;
 }
+
 
 html{
 background: url(https://cdn.apartmenttherapy.info/image/upload/v1586153209/at/news-culture/2020-04/200402-bloomscape-zoom-3.png) no-repeat center fixed ;
@@ -30,7 +25,8 @@ background-size: cover;
 
 h2{
   color: white;
-  
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-variant: small-caps;
 }
 
 button{
@@ -38,11 +34,11 @@ button{
   margin: 5%;
   float: right;
   background-color: #4CAF50; 
-  border: none;
+  /* border: none; */
   color: white;
   /* padding: 16px 32px; */
   text-align: center;
-  text-decoration: none;
+  /* text-decoration: none; */
   /* display: inline-block; */
   font-size: 16px;
   /* margin: 4px 2px; */
@@ -77,6 +73,8 @@ button{
 .graf{
     background-color: rgb(255, 255, 255);
     margin:3%;
+    border: hotpink;
+    border-color: hotpink;
      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .switch {
